Fixed some alignment issues and changed some fonts

--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,45 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+#text {
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+#author {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.container {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 body {
   background-color: coral;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
+
 #quote-box {
   background-color: azure;
+  width: 400px;
   border-radius: 20px;
   text-align: center;
   padding: 30px;
 }
 #new-quote {
   background-color: black;
+  border: 0;
   color: white;
   height: 28px;
   width: 100px;
-  border: 0;
   border-radius: 5px;
+  text-align: center;
+  grid-area: 1 / 5 / 2 / 7;
 }
 
 #new-quote:hover {
@@ -24,10 +49,13 @@ body {
 }
 
 #tweet-quote {
+  position: relative;
+  top: 3px;
   color: black;
   text-decoration: none;
   margin-right: 15vw;
   transition: background 0.3s ease-out;
+  grid-area: 1 / 2 / 2 / 3;
 }
 #tweet-quote:hover {
   color: coral;
@@ -41,4 +69,14 @@ body {
 
 button:hover {
   cursor: pointer;
+}
+
+.button {
+  display: grid;
+  grid-template-columns: 50px 50px 50px 50px 50px 50px 50px;
+  grid-template-rows: 50px;
+}
+
+#author {
+  margin-bottom: 30px;
 }
